Fixed some spacing Issues

--- a/src/views/tictactoe/TicTacToe.css
+++ b/src/views/tictactoe/TicTacToe.css
@@ -7,7 +7,7 @@
     flex-flow: wrap row;
     align-items: center;
     justify-content: center;
-    height: 70vh;
+    height: 50vh;
     padding: 5px;
 }
 
